implemented measurement retrieval
